css/site.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');

html {
    height: 100%;
    -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;
}

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

body {
    /* background-color:#4a5e63; */
    background-color:#546468;
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    height: 100%;
    padding-top:56px;
}

main {
    max-width: 100rem;
}

.carousel {
    margin-bottom: 2rem;
}
  
.carousel-caption {
    bottom: 3rem;
    z-index: 10;
}

.carousel-item {
    height: 26rem;
    max-width: 100vw;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}

.welcome-carousel-image1 {
    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
    background-image:url('../images/scene400.jpg');
    height: 225px;
}

.welcome-carousel-image2 {
    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
    background-image:url('../images/scene2-400.jpg');
    height: 225px;
}

.welcome-carousel-image3 {
    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
    background-image:url('../images/scene4-400.jpg');
    height: 225px;
}

@media (min-width: 768px) { 
    .welcome-carousel-image1 {
        background-image:url('../images/scene800.jpg');
        height: 450px;
    } 
    .welcome-carousel-image2 {
        background-image:url('../images/scene2-800.jpg');
        height: 450px;
    }     

    .welcome-carousel-image3 {
        background-image:url('../images/scene4-800.jpg');
        height: 450px;
    }       
}

@media (min-width: 992px) { 
    .welcome-carousel-image1 {
        background-image:url('../images/scene800.jpg');
        height: 450px;
    } 
    .welcome-carousel-image2 {
        background-image:url('../images/scene2-800.jpg');
        height: 450px;
    }     

    .welcome-carousel-image3 {
        background-image:url('../images/scene4-800.jpg');
        height: 450px;
    }       
}

@media (min-width: 1200px) { 
    .welcome-carousel-image1 {
        background-image:url('../images/scene1000.jpg');
        height: 563px;
    } 
    .welcome-carousel-image2 {
        background-image:url('../images/scene2-1000.jpg');
        height: 563px;
    }     

    .welcome-carousel-image3 {
        background-image:url('../images/scene4-1000.jpg');
        height: 563px;
    }       
}

.badge-new {
    font-size: .7rem; 
    background: rgb(50, 82, 50);
    font-weight: 200;
}

.row-new {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/* Create two equal columns */
.column-new {
  flex: 50%;
}

.small-font {
    font-size: .7rem;
}

.my-primary {
    background-color:#404242 !important;
}

textarea {
    resize: both;
}

.para {
    font-size: 1.0rem;
    background-color: whitesmoke;
    line-height: 1.625rem;
    padding: 10px;
    box-shadow: 9px 10px 11px -2px rgba(0,0,0,0.69);
    border-left: 3px solid ;
    border-color: orange;    
    letter-spacing: 1px;
    margin-bottom: 90px;
}

/* p {
    font-size: 2.1rem;
    line-height: 1.9rem;
} */

h1 {
    color: orange;
    font-size: 1.8rem;
}

.hdg-colour {
    color: orange;
}

@media (min-width: 768px) { 
    .para {
        font-size: 1.2rem;
        line-height: 1.9rem;
        margin-bottom: 90px;
    }
    .contact {
        margin-bottom: 30px;
    }
    h1 {
        font-size: 2.2rem;
    }
}

h1, h3 {
    text-shadow: 2px 2px 3px black;
}

div h1 {
    box-shadow: none;
}

.clearfix {
  overflow: auto;
}

.pics {
    box-shadow: 9px 10px 11px -2px rgba(0,0,0,0.69);
    opacity: 1;
    filter: alpha(opacity=100);
    margin-right: 6px;
    border: 2px solid #828585;
}

#sticky-footer {
  background: rgb(73, 73, 73);
  position: fixed;
  width: 100%;
  left: 0;
  bottom: 0;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus textarea:-webkit-autofill,
textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
  box-shadow: 0 0 0px 1000px #ffffff inset !important;
}

